one.txt
  File "C:\Users\mayan\AppData\Local\Programs\Python\Python37\lib\site-packages\django\uti
ls\functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "C:\Users\mayan\AppData\Local\Programs\Python\Python37\lib\site-packages\django\url
s\resolvers.py", line 582, in urlconf_module
    return import_module(self.urlconf_name)
  File "C:\Users\mayan\AppData\Local\Programs\Python\Python37\lib\importlib\__init__.py",
line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1006, in _gcd_import
  File "<frozen importlib._bootstrap>", line 983, in _find_and_load
  File "<frozen importlib._bootstrap>", line 967, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 677, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 728, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "C:\Users\mayan\PycharmProjects\textutils\textutils\textutils\urls.py", line 18, in
 <module>
    from .import views
  File "C:\Users\mayan\PycharmProjects\textutils\textutils\textutils\views.py", line 6
    returnHttp 'Hello'
                     ^
SyntaxError: invalid syntax

C:\Users\mayan\PycharmProjects\textutils\textutils\textutils\views.py changed, reloading.
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 18 unapplied migration(s). Your project may not work properly until you apply the
 migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
November 15, 2020 - 22:30:54
Django version 3.1.3, using settings 'textutils.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
[15/Nov/2020 22:30:58] "GET / HTTP/1.1" 200 5
C:\Users\mayan\PycharmProjects\textutils\textutils\textutils\views.py changed, reloading.
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 18 unapplied migration(s). Your project may not work properly until you apply the
 migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
November 15, 2020 - 22:37:38
Django version 3.1.3, using settings 'textutils.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
C:\Users\mayan\PycharmProjects\textutils\textutils\textutils\views.py changed, reloading.
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 18 unapplied migration(s). Your project may not work properly until you apply the
 migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
November 15, 2020 - 22:48:20
Django version 3.1.3, using settings 'textutils.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
[15/Nov/2020 22:48:29] "GET / HTTP/1.1" 200 26
